--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,97 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@article{marlcomm2025,
+  abbr={NeurIPS-W},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
-  inspirehep_id = {3255}
+  title={Communicating Plans, Not Percepts: Scalable Multi-Agent Coordination with Embodied World Models},
+  author={Brennen A. Hill and Mant Koh En Wei and Thangavel Jishnuanandh},
+  journal={NeurIPS 2025 Workshop on Scaling Environments for Agents},
+  year={2025},
+  abstract={Developed a novel intention communication framework in MARL that achieved >96% success in a complex coordination task using a learned world model for latent trajectory planning and a self-attention mechanism to encode and share agent intentions, significantly outperforming emergent protocols.},
+  arxiv={https://arxiv.org/abs/2508.02912},
+  html={https://arxiv.org/html/2508.02912},
+  pdf={https://arxiv.org/pdf/2508.02912.pdf},
+  additional_info={Also in NeurIPS 2025 Workshop on Embodied World Models for Decision Making; and in NeurIPS 2025 Workshop on Optimization for Machine Learning.}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@article{vcnet2025,
+  abbr={NeurIPS-W},
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  selected={true},
+  title={The Geometry of Cortical Computation: Manifold Disentanglement and Predictive Dynamics in VCNet},
+  author={Brennen A. Hill and Zhang Xinyu and Timothy Putra Prasetio},
+  journal={NeurIPS 2025 Workshop on Symmetry and Geometry in Neural Representations},
+  year={2025},
+  abstract={Designed VCNet, a novel architecture emulating the primate visual cortex, achieving state-of-the-art accuracy on two vision benchmarks with over 10x greater parameter efficiency than standard models.},
+  arxiv={https://arxiv.org/abs/2508.02995},
+  html={https://arxiv.org/html/2508.02995},
+  pdf={https://arxiv.org/pdf/2508.02995.pdf},
+  additional_info={Also in NeurIPS 2025 Workshop on Interpreting Cognition in Deep Learning Models.}
 }
 
-@book{przibram1967letters,
+@article{adversarialwm2025,
+  abbr={NeurIPS-W},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  selected={true},
+  title={Co-Evolving Complexity: An Adversarial Framework for Automatic MARL Curricula},
+  author={Brennen A. Hill},
+  journal={NeurIPS 2025 Workshop on Scaling Environments for Agents},
+  year={2025},
+  abstract={Developed a novel adversarial co-evolution framework to automatically generate a curriculum for multi-agent reinforcement learning that induces complex emergent strategies, increasing agent task performance by over 300% compared to baseline.},
+  arxiv={https://arxiv.org/abs/2509.03771},
+  html={https://arxiv.org/html/2509.03771},
+  pdf={https://arxiv.org/pdf/2509.03771.pdf}
+}
+
+@article{organoid2025,
+  abbr={NeurIPS-W},
+  bibtex_show={true},
+  selected={true},
+  title={The Physical Basis of Prediction: World Model Formation in Neural Organoids via an LLM-Generated Curriculum},
+  author={Brennen A. Hill},
+  journal={NeurIPS 2025 Workshop on Scaling Environments for Agents},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2509.04633},
+  html={https://arxiv.org/html/2509.04633},
+  pdf={https://arxiv.org/pdf/2509.04633.pdf},
+  additional_info={Also in NeurIPS 2025 Workshop on Embodied World Models for Decision Making.}
+}
+
+@article{languagedriven2025,
+  abbr={NeurIPS-W},
+  bibtex_show={true},
+  selected={true},
+  title={Hierarchical Task Environments as the Next Frontier for Embodied World Models in Robot Soccer},
+  author={Brennen A. Hill},
+  journal={NeurIPS 2025 Workshop on Embodied World Models for Decision Making},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2509.04731},
+  html={https://arxiv.org/html/2509.04731},
+  pdf={https://arxiv.org/pdf/2509.04731.pdf}
+}
+
+@article{heft2025,
+  abbr={arXiv},
+  bibtex_show={true},
+  title={HEFT: A Coarse-to-Fine Hierarchy for Enhancing the Efficiency and Accuracy of Language Model Reasoning},
+  author={Brennen A. Hill},
+  journal={In review},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2509.09801},
+  html={https://arxiv.org/html/2509.09801},
+  pdf={https://arxiv.org/pdf/2509.09801.pdf}
+}
+
+@article{threatmodel2025,
+  abbr={arXiv},
+  bibtex_show={true},
+  title={Breaking to Build: A Threat Model of Prompt-Based Attacks for Securing LLMs},
+  author={Brennen A. Hill and Surendra Parla and Venkata Abhijeeth Balabhadruni and Atharv Prajod Padmalayam and Sujay Chandra Shekara Sharma},
+  journal={In review},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2509.04615},
+  html={https://arxiv.org/html/2509.04615},
+  pdf={https://arxiv.org/pdf/2509.04615.pdf}
 }
