--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   arxiv={2508.02912},
   html={https://arxiv.org/html/2508.02912},
   pdf={https://arxiv.org/pdf/2508.02912.pdf},
-  additional_info={. Also in NeurIPS 2025 Workshop on Embodied World Models for Decision Making; and in NeurIPS 2025 Workshop on Optimization for Machine Learning.}
+  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making; NeurIPS 2025 Workshop on Optimization for Machine Learning}
 }
 
 @article{vcnet2025,
@@ -25,7 +25,7 @@
   arxiv={2508.02995},
   html={https://arxiv.org/html/2508.02995},
   pdf={https://arxiv.org/pdf/2508.02995.pdf},
-  additional_info={. Also in NeurIPS 2025 Workshop on Interpreting Cognition in Deep Learning Models.}
+  also_in={NeurIPS 2025 Workshop on Interpreting Cognition in Deep Learning Models}
 }
 
 @article{adversarialwm2025,
@@ -53,7 +53,7 @@
   arxiv={2509.04633},
   html={https://arxiv.org/html/2509.04633},
   pdf={https://arxiv.org/pdf/2509.04633.pdf},
-  additional_info={. Also in NeurIPS 2025 Workshop on Embodied World Models for Decision Making.}
+  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making}
 }
 
 @article{languagedriven2025,
