--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,7 +59,7 @@
 @article{languagedriven2025,
   abbr={NeurIPS-EWM},
   bibtex_show={true},
-  title={Hierarchical Task Environments as the Next Frontier for Embodied World Models in Robot Soccer},
+  title={Generative World Models of Tasks: LLM-Driven Hierarchical Scaffolding for Embodied Agents},
   author={Brennen A. Hill},
   journal={NeurIPS 2025 Workshop on Embodied World Models for Decision Making},
   year={2025},
