--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,7 +3,42 @@ layout: page
 permalink: /404.html
 title: "Page not found"
 description: "Looks like there has been a mistake. Nothing exists here."
-redirect: true
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
+<style>
+  /* We hide the HTML to ensure the header/footer don't flash */
+  html {
+    visibility: hidden;
+    opacity: 0;
+  }
+</style>
+
+<script>
+  (function() {
+    var path = window.location.pathname;
+    var lowerPath = path.toLowerCase();
+
+    // --- CASE 1: URL has Uppercase letters ---
+    if (path !== lowerPath) {
+        // Redirect to lowercase. Keep page hidden.
+        window.location.replace(lowerPath + window.location.search + window.location.hash);
+    } 
+    
+    // --- CASE 2: URL is already lowercase (A real 404) ---
+    else {
+        // 1. Reveal the page so the user sees the error message
+        document.documentElement.style.visibility = "visible";
+        document.documentElement.style.opacity = "1";
+
+        // 2. Run the logic to redirect to Home after 3 seconds
+        setTimeout(function() {
+            window.location.href = "{{ site.baseurl }}/"; 
+        }, 3000);
+    }
+  })();
+</script>
+
+<div style="text-align: center; margin-top: 50px;">
+  <p>You will be redirected to the main page within 3 seconds.</p>
+  <p>If not redirected, please go back to the <a href="{{ site.baseurl }}/">home page</a>.</p>
+</div>
