--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   abstract={Robust coordination is critical for effective decision-making in multi-agent systems, especially under partial observability. A central question in Multi-Agent Reinforcement Learning (MARL) is whether to engineer communication protocols or learn them end-to-end. We investigate this dichotomy using embodied world models. We propose and compare two communication strategies for a cooperative task-allocation problem. The first, Learned Direct Communication (LDC), learns a protocol end-to-end, with agents generating messages and actions concurrently. The second, Intention Communication, uses an engineered inductive bias: a compact, learned world model, the Imagined Trajectory Generation Module (ITGM), to simulate future states. Agents then communicate a summary of this plan. We evaluate these approaches on goal-directed interaction in a grid world, a canonical abstraction for embodied AI problems. Our experiments reveal that while emergent communication is viable in simple settings, the engineered, world model-based approach shows superior performance, sample efficiency, and scalability as complexity increases. These findings advocate for integrating structured, predictive models into MARL agents to enable active, goal-driven coordination.},
   arxiv={2508.02912},
   html={https://arxiv.org/html/2508.02912},
-  pdf={communicating-plans-not-percepts},
+  pdf={communicating-plans-not-percepts.pdf},
   also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making; NeurIPS 2025 Workshop on Optimization for Machine Learning},
   video= {https://www.youtube.com/embed/VuvB9-P1xT0},
   poster= {Communicating-Plans-Not-Percepts.png},
