--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
 
 @article{sapin2025,
   selected={true},
-  abbr={BRAID},
+  abbr={NSF BRAID},
   bibtex_show={true},
   title={Structural Plasticity as Active Inference: A Biologically-Inspired Architecture for Homeostatic Control.},
   author={Brennen A. Hill},
